concurrent/C++ is partially ported to Linux

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -1,33 +1,38 @@
 cmake_minimum_required(VERSION 2.6.4)
 
-PROJECT (concurrentcpp)
-SET (concurrentcpp_SOURCES ClientSocketConnector.cpp
-  IPv4SocketAddress.cpp
-  IPv6SocketAddress.cpp
+project (concurrentcpp)
+set (concurrentcpp_SOURCES 
+#  ClientSocketConnector.cpp
+#  IPv4SocketAddress.cpp
+#  IPv6SocketAddress.cpp
   Logging.cpp
-  NamedPipe.cpp
-  RClientSocketAddress.cpp
-  RConnectedSocket.cpp
-  RInOutSocket.cpp
-  RMultiprotoSocketAddress.cpp
-  RServerSocketAddress.cpp
-  RSingleSocket.cpp
-  RSocketAddress.cpp
-  RSocket.cpp
-  RSocketGroup.cpp
-  SCheck.cpp
+#  NamedPipe.cpp
+#  RClientSocketAddress.cpp
+#  RConnectedSocket.cpp
+#  RInOutSocket.cpp
+#  RMultiprotoSocketAddress.cpp
+#  RPath.cpp
+#  RServerSocketAddress.cpp
+#  RSingleSocket.cpp
+#  RSocketAddress.cpp
+#  RSocket.cpp
+#  RSocketGroup.cpp
+#  SCheck.cpp
   SCommon.cpp
-  SComplPort.cpp
-  SEvent.cpp
+#  SComplPort.cpp
+#  SEvent.cpp
   SException.cpp
-  SocketAddressFactory.cpp
+#  SocketAddressFactory.cpp
   SShutdown.cpp
   StateMap.cpp
   StdAfx.cpp
-  SThread.cpp
-  SWinCheck.cpp
+#  SThread.cpp
+#  SWinCheck.cpp
   ThreadRepository.cpp
-  time_wce.cpp
-  UnknownprotoSocketAddress.cpp )
+#  time_wce.cpp
+#  UnknownprotoSocketAddress.cpp 
+)
 
-ADD_LIBRARY(concurrentcpp ${concurrentcpp_SOURCES})
+include_directories(${CMAKE_SOURCE_DIR})
+
+add_LIBRARY(concurrentcpp ${concurrentcpp_SOURCES})
