Add sample CUnit tests

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.6.4)
 
 set(CMAKE_CXX_FLAGS "-g -O0 -std=gnu++0x")
 
+add_subdirectory(tests)
+
 project (concurrent)
 set (concurrent_SOURCES 
 #  ClientSocketConnector.cpp
