--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -8,5 +8,5 @@ include_directories(..)
 
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
-target_link_libraries(tests_exec cunit)
+target_link_libraries(tests_exec cunit boost_thread-mt)
 
