ticket:13 test mutex used class Rthread

--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -5,7 +5,8 @@ set(TestsSrc
 
 include_directories(../../../CUnit/CUnit/Headers)
 include_directories(..)
+include_directories(${CMAKE_SOURCE_DIR}/PEvents)
 
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
-target_link_libraries(tests_exec cunit boost_thread-mt log4cxx concurrent)
+target_link_libraries(tests_exec cunit boost_thread-mt log4cxx concurrent pevents)
