ticket:76, ticket:62: wip. REvent::wait is not static now

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -15,6 +15,7 @@ set (concurrent_SOURCES
   RSocket.cpp
   RSocketAddress.cpp
   RThread.cpp
+  RThreadRepository.cpp
   SCommon.cpp
   SException.cpp
   SShutdown.cpp
