--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ include_directories(../../../PEvents)
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
 
-target_link_libraries(tests_exec /usr/local/lib/libcunit.a log4cxx concurrent /usr/local/lib/libpevents.a)
+target_link_libraries(tests_exec cunit log4cxx concurrent /usr/local/lib/libpevents.a)
 target_link_libraries(tests_exec 
   ${Boost_THREAD_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
