--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -29,7 +29,7 @@ include_directories(../../../PEvents)
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
 
-target_link_libraries(tests_exec cunit log4cxx concurrent pevents pthread)
+target_link_libraries(tests_exec cunit log4cxx concurrent /usr/local/lib/pevents/libpevents.a pthread)
 target_link_libraries(tests_exec 
   ${Boost_THREAD_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
