--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 #add_definitions(-DMALLOC_CHECK_=2)
 
-#set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_STATIC_LIBS OFF)
 #set(Boost_USE_STATIC_RUNTIME OFF)
 #set(Boost_ADDITIONAL_VERSIONS 1.53.0)
 set(Boost_USE_MULTITHREADED ON)  
@@ -26,11 +26,12 @@ set(TestsSrc
 include_directories(../../../CUnit/CUnit/Headers)
 include_directories(..)
 include_directories(../../../PEvents)
+include_directories(${Boost_INCLUDE_DIRS})
 
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
 
-target_link_libraries(tests_exec cunit log4cxx concurrent /usr/local/lib/pevents/libpevents.a pthread)
+target_link_libraries(tests_exec cunit log4cxx concurrent pevents pthread)
 target_link_libraries(tests_exec 
   ${Boost_THREAD_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
