Try redesign state_change

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -41,6 +41,7 @@ set (concurrent_SOURCES
   SSingleton.cpp
   StateAxis.cpp
   StateMap.cpp
+  StateMapRepository.cpp
   StdAfx.cpp
   TCPSocket.cpp
 )
