--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ set (pevents_SOURCES
 	  pevents.cpp
 )
 
+set(CMAKE_CXX_FLAGS "-g -O0 -std=c++11 -Wall")
+
 # Enable WaitForMultipleEvents
 add_definitions(-DWFMO)
 
-add_library(pevents ${pevents_SOURCES})
+add_library(pevents SHARED ${pevents_SOURCES})
