ticket:234. Server socket addresses added

--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -37,6 +37,7 @@ set (concurrent_SOURCES
   RThreadRepository.cpp
   RWindow.cpp
   SCommon.cpp
+  ServerSocket.cpp
   SException.cpp
   SShutdown.cpp
   SSingleton.cpp
