--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TestsSrc
   ClassWithStatesCU.cpp
   EventCU.cpp
   ExistentCU.cpp
+  ProcessCU.cpp
   RBufferCU.cpp
   RConnectionCU.cpp
   REventCU.cpp
