--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)  
 find_package(Boost 1.54 COMPONENTS system thread REQUIRED)
 
-message(${Boost_THREAD_LIBRARY})
+find_library(CUNIT_LIBRARY cunit ../../../CUnit/CUnit)
 
 set(TestsSrc
 #  ClassWithStatesCU.cpp
@@ -38,8 +38,10 @@ include_directories(${Boost_INCLUDE_DIRS})
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
 
 
-target_link_libraries(tests_exec cunit log4cxx concurrent pevents pthread)
+target_link_libraries(tests_exec concurrent pthread)
 target_link_libraries(tests_exec 
   ${Boost_THREAD_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
+  ${CUNIT_LIBRARY}
+  ${PEVENTS_LIBRARY}
 )
