--- a/C++/tests/CMakeLists.txt
+++ b/C++/tests/CMakeLists.txt
@@ -6,7 +6,9 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)  
 find_package(Boost 1.54 COMPONENTS system thread REQUIRED)
 
-find_library(CUNIT_LIBRARY cunit ../../../CUnit/CUnit)
+add_subdirectory(CUnit/CUnit)
+
+find_library(CUNIT_LIBRARY cunit CUnit/CUnit)
 
 set(TestsSrc
 #  ClassWithStatesCU.cpp
@@ -30,9 +32,9 @@ set(TestsSrc
   tests.cpp
 )
 
-include_directories(../../../CUnit/CUnit/Headers)
+include_directories(CUnit/CUnit/Headers)
 include_directories(..)
-include_directories(../../../PEvents)
+include_directories(../PEvents)
 include_directories(${Boost_INCLUDE_DIRS})
 
 add_executable(tests_exec ${TestsSrc} ${TestsInc})
@@ -42,6 +44,6 @@ target_link_libraries(tests_exec concurrent pthread)
 target_link_libraries(tests_exec 
   ${Boost_THREAD_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
-  ${CUNIT_LIBRARY}
   ${PEVENTS_LIBRARY}
+  ${CUNIT_LIBRARY}
 )
